# Antibody

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  test_nim_input_type.py  test_query_output.py  test_recall.py  test_recall_api.py  test_recall_latency.py
.cognee_data/5c7757cf-a050-4807-81cf-1a34470a0b3f/: text_229a456be3f0876ed2d91c01ab335a4e.txt  text_33d428ebc5885d3cf810d0566cb8098f.txt  text_34e32ae8f334bfdf4df0400cf8702476.txt  text_9b1b7921af803a538113a33ed71e9a1a.txt  text_ec7c879cbea3e36b6e4c68454cc64499.txt
.cognee_system/databases/: cache.db-shm  cache.db-wal
.github/workflows/: ci.yml
Backend/: __init__.py  app.py  config.py  errors.py  requirements.txt
Backend/routes/: __init__.py  forget.py  graph.py  health.py  improve.py  recall.py  remember.py  sources.py  stats.py
Backend/schemas/: __init__.py  cytoscape.py  requests.py  responses.py
Backend/services/: __init__.py  _helpers.py  forget_service.py  graph_service.py  improve_service.py  ingest_service.py  recall_service.py  sources_service.py  stats_service.py
Docs/: ARCHITECTURE.md  BACKEND_API_SPEC.md  FRONTEND_UX_SPEC.md  HACKATHON_CONTEXT.md  MEMORY_CORE_DESIGN.md  MILESTONE_1_REPORT.md  NIM_INTEGRATION.md  ONTOLOGY.md  PRODUCT_PRD.md  PROGRESS.md  PROJECT_HEALTH.md
Frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
api/: __init__.py  config.py  main.py  requirements.txt  seed.py
api/core/: __init__.py  error_handlers.py  exceptions.py  logging.py
api/feed/: __init__.py  router.py
api/intake/: __init__.py  (+3 more)
docs/: README.md  api-reference.md  architecture.md  browser-extension.md  confidence-engine.md  contributing.md  data-model.md  deployment.md  help-chatbot.md  memory-layer.md  security-and-privacy.md
extension/: README.md  background.js  manifest.json  popup.html  popup.js  privacy_policy.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
help_api/: config.py  ingest.py  main.py  memory_service.py
help_docs/: antibody_overview.md
memory_core/: __init__.py  config.py  errors.py  models.py
seed/: __init__.py  load_seed.py  rich_families.py  seed_data.py
test_assets/: README.md  USA-customs-test.mp3.mpeg  Visa-scam-test.mp3.mpeg  bank_kyc_sms.txt  irs_warrant_sms.txt
tests/: conftest.py  generate_test_sources.py  reproduce_milestone_1.py  test_all_apis.py  test_api_smoke.py  test_backend_timing.py  test_cognify.py  test_curl.py  test_embed.py  test_errors.py  test_graph.py  test_integration_features.py  test_litellm.py
(+1535 files in other folders)
